# faster-lio

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.MD  justfile
config/: avia.yaml  avia_indoor.yaml  default.yaml  hesai.yaml  horizon.yaml  livox.yaml  mid360.yaml  ouster64.yaml  robosense.yaml  velodyne.yaml  velodyne_liosam.yaml  velodyne_ulhk.yaml  velodyne_utbm.yaml
examples/: evaluate_lio.cc  run_mapping.cc
include/: common_lib.h  imu_processing.h  laser_mapping.h  pointcloud_preprocess.h  utils.h
include/faster_lio/: common_lib.h  compat.h  faster_lio.h  imu_processing.h  laser_mapping.h  laser_mapping_config.h  logger.h  loop_closer.h  nis.h  observability_guard.h  options.h  outlier_gate.h  pointcloud_preprocess.h  pose_graph.h  scan_context.h  types.h  use-ikfom.hpp  wheel_fusion.h
include/ivox3d/: ivox3d.h  ivox3d_node.hpp
scripts/: evaluate_trajectory.py  extract_bag.py  plot_diagnostics.py  plot_metrics.py  requirements.txt
src/: imu_processing.cc  laser_mapping.cc  laser_mapping_config.cc  loop_closer.cc  options.cc  pointcloud_preprocess.cc  pose_graph.cc  scan_context.cc  utils.cc
tests/: test_common_lib_edge_cases.cc  test_imu_init_params.cc  test_imu_mount.cc  test_imu_processing.cc  test_imu_processing_edge_cases.cc  test_ivox.cc  test_ivox_edge_cases.cc  test_laser_mapping.cc  test_laser_mapping_config.cc  test_laser_mapping_edge_cases.cc  test_lio_drift_attribution.cc  test_nis.cc  test_observability_guard.cc  test_outlier_gate.cc  test_pointcloud_preprocess.cc  test_pointcloud_preprocess_edge_cases.cc  test_pose_graph.cc  test_scan_context.cc  test_types.cc  test_wheel_odom.cc
